--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0",
         "psr/log": "^1.1",
-        "roave/you-are-using-it-wrong": "^1.3",
+        "roave/you-are-using-it-wrong": "dev-master@dev",
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
